--- a/src/components/GlitchTheme.css
+++ b/src/components/GlitchTheme.css
@@ -6,13 +6,20 @@
     text-align: center;
     font-family: 'Share Tech Mono', monospace;
   }
+.glitch-mode-gal {
+    min-height: 100vh;
+    background: linear-gradient(65deg, #000000, #131313, #0a0a0a);
+    color: #fff;
+    padding: 4rem 2rem;
+    text-align: center;
+    font-family: 'Share Tech Mono', monospace;
+  }
   
   .glitch-heading {
     font-size: 3rem;
     color: #f0f;
     animation: glitch 1s infinite;
   }
-  
   .glitch-sub {
     font-size: 1.2rem;
     color: #a78bfa;
@@ -73,6 +80,23 @@
 }
 
 .glitch-exit:hover {
+  background: #f0f3;
+  color: rgb(255, 255, 255);
+}
+  .glitch-exit-gal {
+  /* margin-top: 3rem; */
+  background: transparent;
+  border: 1px solid #f0f;
+  padding: 0.8rem 0.6rem;
+  color: #f0f;
+  font-family: inherit;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin-left: 80%;
+}
+
+.glitch-exit-gal:hover {
   background: #f0f3;
   color: rgb(255, 255, 255);
 }
@@ -174,3 +198,81 @@
     transform: translateY(0px);
   }
   
+  .art-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    gap: 1.5rem;
+    padding: 2rem 0;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .art-card {
+    overflow: hidden;
+    border-radius: 12px;
+    box-shadow: 0 0 12px rgba(167, 139, 250, 0.08);
+    transition: transform 0.2s ease;
+    cursor: pointer;
+  }
+  
+  .art-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 14px rgba(198, 139, 250, 0.637);
+  }
+  
+  .art-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .gallery-modal {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(6px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
+  
+  .gallery-modal img {
+    max-width: 90vw;
+    max-height: 90vh;
+    border-radius: 12px;
+    box-shadow: 0 0 24px #a78bfa66;
+  }
+  
+  .close-button {
+    position: absolute;
+    top: 1.5rem;
+    right: 2rem;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: #232323;
+    cursor: pointer;
+  }
+  .close-button:hover {
+    background: none;
+    color: #88003d;
+    cursor: pointer;
+  }
+  
+  .glitch-mini-but {
+    margin-top: 3rem;
+    background: transparent;
+    border: 1px solid rgb(0, 255, 255);
+    padding: 0.8rem 1.4rem;
+    color: rgb(0, 217, 255);
+    font-family: inherit;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .glitch-mini-but:hover {
+    background: rgba(0, 238, 255, 0.2);
+    color: rgb(255, 255, 255);
+  }
